Added the option to limit stacks. Added a create function to Arr that lets you create arrays with values. Added tests for these.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
         <title>Goodcore Test Page</title>
     </head>
     <body>
-        <script src="./dist/goodcore.iife" />
+        <script src="./dist/goodcore.iife.min.js" />
         <script>
-            goodcore.Integrate();
+            goodcore.integrate();
         </script>
         <H1>GoodCore library is loaded</H1>
     </body>
